# o-direct-grpc

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  test_server.sh
proto/: file_service.proto
src/: client.rs  file_io.rs  main.rs
